--- a/WPF/Desktop/Views/TourReservationWindow.xaml
+++ b/WPF/Desktop/Views/TourReservationWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="BookingApp.View.DesktopViews.TourReservationWindow"
+﻿<Window x:Class="BookingApp.WPF.Desktop.Views.TourReservationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BookingApp.View.DesktopViews"
         mc:Ignorable="d"
         Title="ReservationWindow" Height="768" Width="1366">
     <Window.Resources>
@@ -60,7 +59,8 @@
            Foreground="White"
            Grid.Row="0"
                                        Margin="5, 0">Name</TextBlock>
-                            <TextBox x:Name="TouristName" 
+                            <TextBox x:Name="TouristName"
+                                     Text="{Binding TouristName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 Style="{StaticResource TextBoxStyle}"></TextBox>
                         </StackPanel>
 
@@ -70,6 +70,7 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
            Grid.Row="0"
                                        Margin="5, 0">Surname</TextBlock>
                             <TextBox x:Name="TouristSurname" 
+                                     Text="{Binding TouristSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 Style="{StaticResource TextBoxStyle}"></TextBox>
                         </StackPanel>
                         <StackPanel>
@@ -77,7 +78,8 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
            Foreground="White"
            Grid.Row="0"
                                        Margin="5, 0">Age</TextBlock>
-                            <TextBox x:Name="TouristAge" 
+                            <TextBox x:Name="TouristAge"
+                                     Text="{Binding TouristAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 Style="{StaticResource TextBoxStyle}"></TextBox>
                         </StackPanel>
                         
@@ -85,6 +87,7 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
                     <Button x:Name="AddTouristButton"
                             Click="AddTouristButton_Click"
                             Style="{StaticResource ButtonStyle}"
+                            IsEnabled="{Binding IsTouristButtonEnabled}"
                             Grid.RowSpan="2"
                             Grid.Column="1"
                             >Add</Button>
@@ -119,6 +122,7 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
            Grid.Row="0"
                                        Margin="5, 0">Name</TextBlock>
                             <TextBox x:Name="PassengerName" 
+                                     Text="{Binding PassengerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 Style="{StaticResource TextBoxStyle}"></TextBox>
                         </StackPanel>
 
@@ -128,6 +132,7 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
            Grid.Row="0"
                                        Margin="5, 0">Surname</TextBlock>
                             <TextBox x:Name="PassengerSurname" 
+                                     Text="{Binding PassengerSurname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 Style="{StaticResource TextBoxStyle}"></TextBox>
                         </StackPanel>
                         <StackPanel>
@@ -136,6 +141,7 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
            Grid.Row="0"
                                        Margin="5, 0">Age</TextBlock>
                             <TextBox x:Name="PassengerAge" 
+                                     Text="{Binding PassengerAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 Style="{StaticResource TextBoxStyle}"></TextBox>
                         </StackPanel>
 
@@ -143,6 +149,7 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
                     <Button x:Name="AddPassengerButton"
                             Click="AddPassengerButton_Click"
                             Style="{StaticResource ButtonStyle}"
+                            IsEnabled="{Binding IsPassengerButtonEnabled}"
                             Grid.RowSpan="2"
                             Grid.Column="1"
                             >Add</Button>
@@ -179,11 +186,31 @@ Style="{StaticResource TextBoxStyle}"></TextBox>
                     </DataGrid.Columns>
 
                 </DataGrid>
-                <Button x:Name="ConfirmReservationButton"
-            Style="{StaticResource ButtonStyle}"
-            Click="ConfirmReservationButton_Click"
-                        Grid.Column="1"
-                        VerticalAlignment="Center">Book</Button>
+                <StackPanel Grid.Column="1"
+                            VerticalAlignment="Center">
+                    <TextBlock x:Name="UseCouponsLink"
+                               FontSize="20"
+                               Margin="5, 0, 0, 0"
+                               MouseLeftButtonDown="UseCouponsLink_Click"
+                               >
+                        <TextBlock.Style>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="Text" Value="Use coupons?"></Setter>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsVoucherSelected}" Value="True">
+                                        <Setter Property="Text"
+                                                Value="Remove coupon"></Setter>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBlock.Style>
+                    </TextBlock>
+                    <Button x:Name="ConfirmReservationButton"
+                            Style="{StaticResource ButtonStyle}"
+                            Click="ConfirmReservationButton_Click"
+                            IsEnabled="{Binding IsConfirmationButtonEnabled}"
+                            >Book</Button>
+                </StackPanel>
             </Grid>
         </Grid>
             <Grid Width="568"
