--- a/WPF/Desktop/Views/TouristHomePage.xaml
+++ b/WPF/Desktop/Views/TouristHomePage.xaml
@@ -1,9 +1,8 @@
-﻿<Page x:Class="BookingApp.View.DesktopViews.TouristHomePage"
+﻿<Page x:Class="BookingApp.WPF.Desktop.Views.TouristHomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:BookingApp.View.DesktopViews"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="1594"
       Title="TouristHomePage">
