--- a/WPF/Web/Views/RescheduleReservationModalDialog.xaml
+++ b/WPF/Web/Views/RescheduleReservationModalDialog.xaml
@@ -32,12 +32,12 @@
                            Text="Reschedule reservation date"/>
 
 
-            <Label Grid.Row="1" FontSize="15" Content="{Binding Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
+            <Label Grid.Row="1" FontSize="15" Content="{Binding Reservation.Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
 
             <Label Grid.Row="1" HorizontalAlignment="Right" Margin="0 10 10 10">
                 <WrapPanel>
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource LocationIcon}"/>
-                    <TextBlock Text="{Binding Accommodation.Location.LocationInfoTemplate}"/>
+                    <TextBlock Text="{Binding Reservation.Accommodation.Location.LocationInfoTemplate}"/>
                 </WrapPanel>
             </Label>
 
@@ -51,14 +51,14 @@
                 <Label Grid.Column="0" Margin="10 5 0 0">
                     <WrapPanel>
                         <Image Style="{StaticResource ImageStyle}" Height="20" Width="20" Source="{StaticResource CalendarIcon}"/>
-                        <TextBlock FontSize="15" Text="{Binding StartDate}"/>
+                        <TextBlock FontSize="15" Text="{Binding Reservation.StartDate}"/>
                     </WrapPanel>
                 </Label>
 
                 <Image Grid.Column="1" Style="{StaticResource ImageStyle}" Source="{StaticResource RightArrowIcon}" Width="32" Height="32"
                        VerticalAlignment="Top" Margin="10 5 10 0"/>
 
-                <DatePicker x:Name="dataPickerNewDate" Grid.Column="3" Margin="10 10 10 30" VerticalContentAlignment="Center"/>
+                <DatePicker x:Name="dataPickerNewDate" SelectedDate="{Binding NewDate, Mode=OneWayToSource}" Grid.Column="3" Margin="10 10 10 30" VerticalContentAlignment="Center"/>
 
             </Grid>
 
