--- a/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
+++ b/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
@@ -47,7 +47,7 @@
 
             <Grid Grid.Row="1">
 
-                <Label Grid.Row="1" FontSize="15" Content="{Binding Path=Reservation.Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
+                <Label Grid.Row="1" FontSize="15" Content="{Binding Reservation.Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <Label HorizontalAlignment="Right" Margin="10 10 0 0">
@@ -60,7 +60,7 @@
                     <Label HorizontalAlignment="Right" Margin="0 10 10 10">
                         <WrapPanel>
                             <Image Style="{StaticResource ImageStyle}" Source="{StaticResource LocationIcon}"/>
-                            <TextBlock Text="{Binding Path=Reservation.Accommodation.Location.LocationInfoTemplate}"/>
+                            <TextBlock Text="{Binding Reservation.Accommodation.Location.LocationInfoTemplate}"/>
                         </WrapPanel>
                     </Label>
                 </StackPanel>
@@ -110,7 +110,7 @@
 
                         <StackPanel Margin="0 10 0 0" Orientation="Horizontal" IsEnabled="{Binding ElementName=checkBoxRequiresRenovation, Path=IsChecked}">
                             <Label Content="Renovation importance" Style="{StaticResource LabelStyle}"/>
-                            <ComboBox x:Name="comboBoxRenovationImportance" Width="200" Margin="10 0 0 0"
+                            <ComboBox x:Name="comboBoxRenovationImportance" SelectedIndex="0" Width="200" Margin="10 0 0 0"
                                       ItemsSource="{Binding ImportanceTypes}"
                                       SelectedValue="{Binding Review.Importance, Mode=OneWayToSource}"
                                       ItemTemplate="{StaticResource ComboBoxItemTemplate}"/>
